--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
         "vue-router": "^3.1.6",
         "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": {}
+    "dependencies": {
+        "tailwindcss": "^1.4.6"
+    }
 }
